<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_heading"
        android:alpha="0.8"
        android:gravity="right"
        tools:targetApi="lollipop"
        android:weightSum="2"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/user_name"
            android:textColor="@color/choose_button_text"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_marginStart="15dp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/cardShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/date_created"
            android:padding="15dp"
            android:background="@android:color/transparent"
            android:textColor="@color/choose_button_text"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/share" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic[9]"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/title"
            android:textColor="@color/choose_button_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardThought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/thought"
            android:textColor="@color/choose_button_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/date_created"
            android:textColor="@color/choose_button_text"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.cardview.widget.CardView>