<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_gradient"
    tools:context=".Activity.ChooseActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/aldrich"
        android:text="@string/selfquotes"
        android:textColor="@color/splash_heading"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/we_ll_show_to_world_what_you_think"
        android:textColor="@color/splash_heading"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/login"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:fontFamily="@font/athiti_medium"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/choose_button_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:fontFamily="@font/athiti_medium"
            android:gravity="center"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/choose_button_text"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>